--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -35,18 +35,18 @@ jobs:
     #     npm run build
 
 
-  deploy:
-    runs-on: ubuntu-latest
+  # deploy:
+  #   runs-on: ubuntu-latest
 
-    needs: build
+  #   needs: build
 
-    steps:
-    - name: Deploy to Server
-      run: |
-        # Set up SSH key for authentication
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ssh_key.pem
-        chmod 600 ssh_key.pem
+  #   steps:
+  #   - name: Deploy to Server
+  #     run: |
+  #       # Set up SSH key for authentication
+  #       echo "${{ secrets.SSH_PRIVATE_KEY }}" > ssh_key.pem
+  #       chmod 600 ssh_key.pem
 
-        # Copy build files to Raspberry Pi
-        scp -i ssh_key.pem -r dist/* tkml@raspberrypi:/
+  #       # Copy build files to Raspberry Pi
+  #       scp -i ssh_key.pem -r dist/* tkml@raspberrypi:/
 
