--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -1,40 +1,58 @@
-name: React App Deployment # name of the workflo
+name: Build and Deploy
 
 on:
   push:
     branches:
-      - main # branch name
+      - main
 
 jobs:
-  deploy-react-to-gh-pages:
+  build:
     runs-on: ubuntu-latest
-    env:
-      EXAMPLE: example # environment variable
 
     steps:
-      # checkout the repository content to github runner
-      - name: Checkout
-        uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-      # setup nodejs environment
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.5
-        with:
-          node-version: "18.16.1"
+    # - name: Setup Node.js
+    #   uses: actions/setup-node@v2
+    #   with:
+    #     node-version: '14.21.3'
 
-      # cache the dependencies to speed up the build
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+    # - name: Update npm packages
+    #   run: npm install -g npm@latest
 
-      # install dependencies
-      - name: Install dependencies
-        run: npm i
+    - name: Install Dependencies
+      run: npm install
 
-      # build the react app
-      - name: Build
-        run: npm run build
+    - name: Build
+      run: npm run build  
+
+    # 👇 Store the dist folder
+    - uses: actions/upload-artifact@v3
+      with:
+        name: app-build
+        path: dist
+
+    # - name: Debug Information
+    #   run: |
+    #     echo "Node.js version: $(node -v)"
+    #     echo "npm version: $(npm -v)"
+    #     ls -la
+    #     npm run build
+
+
+  # deploy:
+  #   runs-on: ubuntu-latest
+
+  #   needs: build
+
+  #   steps:
+  #   - name: Deploy to Server
+  #     run: |
+  #       # Set up SSH key for authentication
+  #       echo "${{ secrets.SSH_PRIVATE_KEY }}" > ssh_key.pem
+  #       chmod 600 ssh_key.pem
+
+  #       # Copy build files to Raspberry Pi
+  #       scp -i ssh_key.pem -r dist/* tkml@raspberrypi:/
+
