--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -31,6 +31,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: app-build
+        path: dist
 
     # - name: Debug Information
     #   run: |
