--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -22,26 +22,24 @@ jobs:
         run: npm install
 
       - name: Build and Store Artifacts
-        run: |
-          npm run build
-          mkdir -p deploy
-          cp -r build/* deploy/
+        run: npm run build
+        # The build artifacts are now in the 'dist/' directory
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: app-build
-          path: deploy
+          path: dist  # Adjust to match the correct path
 
-      # - name: Copy Artifacts to Raspberry Pi
-      #   uses: appleboy/scp-action@master
-      #   with:
-      #     host: 'raspberrypi.local'
-      #     username: 'tkml'
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     port: 22
-      #     source: ${{ github.workspace }}/deploy/
-      #     target: '/'
+      - name: Copy Artifacts to Raspberry Pi
+        uses: appleboy/scp-action@master
+        with:
+          host: 'raspberrypi.local'
+          username: 'tkml'
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          source: 'dist/'  # Adjust to match the correct path
+          target: '/'
 
       # - name: SSH into Raspberry Pi and deploy
       #   uses: appleboy/ssh-action@master
