--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -31,15 +31,15 @@ jobs:
           name: app-build
           path: dist  # Adjust to match the correct path
 
-      - name: Copy Artifacts to Raspberry Pi
-        uses: appleboy/scp-action@master
-        with:
-          host: 'raspberrypi.local'
-          username: 'tkml'
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          source: 'dist/'  # Adjust to match the correct path
-          target: '/'
+      # - name: Copy Artifacts to Raspberry Pi
+      #   uses: appleboy/scp-action@master
+      #   with:
+      #     host: 'raspberrypi.local'
+      #     username: 'tkml'
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     port: 22
+      #     source: 'dist/'  # Adjust to match the correct path
+      #     target: '/'
 
       # - name: SSH into Raspberry Pi and deploy
       #   uses: appleboy/ssh-action@master
