--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -38,3 +38,13 @@ jobs:
       # build the react app
       - name: Build
         run: npm run build
+
+      - name: Deploy to Raspberry Pi
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.RASPBERRY_PI_HOST }}
+          username: ${{ secrets.RASPBERRY_PI_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: dist/  # Specify the directory containing build artifacts
+          target: /
+      
