--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -44,10 +44,11 @@ jobs:
           if [ -n "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
             echo "Private key secret exists."
             # Now you can proceed with your SSH command or other actions
-            # ssh -i <(echo "${{ secrets.SSH_PRIVATE_KEY }}") username@raspberry-pi-address
+            ssh -i <(echo "${{ secrets.SSH_PRIVATE_KEY }}") username@raspberry-pi-address
           else
             echo "Private key secret not found. Please check the repository secrets."
           fi
+              
       
 
       # - name: Debug Info
