--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -39,11 +39,14 @@ jobs:
       - name: Switch to deploy branch
         run: git checkout -B deploy
 
-      - name: Copy build artifacts
-        run: cp -r dist/* .
+      - name: List contents of the working directory
+        run: ls
 
-      - name: Commit and push build artifacts
-        run: |
-          git add .
-          git commit -m "Add build artifacts"
-          git push origin deploy
+      # - name: Copy build artifacts
+      #   run: cp -r dist/* .
+
+      # - name: Commit and push build artifacts
+      #   run: |
+      #     git add .
+      #     git commit -m "Add build artifacts"
+      #     git push origin deploy
