--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: list contents of the working directory
+        run: ls
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
