one more ls added

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -13,37 +13,48 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      # - name: Set up Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 14
+
       - name: Install dependencies
         run: npm install
 
       - name: Build
         run: npm run build
 
-      - name: List contents of the working directory
+      - name: 1 list contents of the working directory
         run: ls
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Checkout repository with dist/ directory
+      - name: 2 List contents of the working directory
+        run: ls
+
+      - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          path: dist  # Include the dist/ directory in the checkout
 
       - name: Set up Git
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
+      - name: 3 List contents of the working directory
+        run: ls
+          
       - name: Switch to deploy branch
         run: git checkout -B deploy
 
-      - name: List contents of the working directory
-        run: ls
+      
 
-      - name: Commit and push build artifacts
-        run: |
-          git add .
-          git commit -m "Add build artifacts"
-          git push origin deploy
+      # - name: Copy build artifacts
+      #   run: cp -r dist/* .
+
+      # - name: Commit and push build artifacts
+      #   run: |
+      #     git add .
+      #     git commit -m "Add build artifacts"
+      #     git push origin deploy
