--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -24,38 +24,22 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: 1 list contents of the working directory
-        run: ls
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: 2 List contents of the working directory
-        run: ls
-
-      # - name: Checkout repository
-      #   uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - name: Set up Git
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      - name: 3 List contents of the working directory
-        run: ls
-          
-      - name: Switch to deploy branch
-        run: git checkout -B deploy
-
-      - name: 4 List contents of the working directory
-        run: ls
-
-      - name: Copy build artifacts
-        run: cp -r dist/* .
-
       - name: Commit and push build artifacts
         run: |
-          git add .
+          git checkout -b deploy
+          ls
+          git add dist/
           git commit -m "Add build artifacts"
           git push origin deploy
