--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -10,8 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
 
       - name: Install dependencies
         run: npm install
@@ -19,37 +24,20 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: dist
-          path: dist
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    if: github.ref == 'refs/heads/main'
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Git
+      - name: Push to deploy branch
         run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: dist
-
-      - name: List contents in the working directory
-        run: ls -R
-        
-      - name: Commit and push build artifacts
-        run: |
-          ls
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
           git checkout -b deploy
-          ls
           git add dist/
-          git commit -m "Add build artifacts"
-          git push origin deploy
+          git commit -m "Deploy"
+          git push -u origin deploy
