--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -2,7 +2,8 @@ name: Build and Push to Serv Content
 
 on:
   push:
-    branches: [main]
+    branches: 
+      - main
 
 jobs:
   serv_content:
@@ -11,10 +12,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # - name: Setup Node
-      #   uses: actions/setup-node@v1
-      #   with:
-      #     node-version: 12.x
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 18.x
 
       - name: Install
         run: npm ci
